--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
     "activeTab",
     "scripting",
     "tabs",
-    "webRequest"
+    "webRequest",
+    "proxy"
   ],
   "host_permissions": ["<all_urls>"],
   "background": {
