--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "SwitchyRelink",
   "version": "0.0.1",
-  "description": "chrome-extension-starter",
+  "description": "轻松快捷地管理和切换多个代理设置",
   "icons": {
     "16": "./assets/logo.png",
     "48": "./assets/logo.png",
@@ -24,7 +24,7 @@
     "type": "module"
   },
   "action": {
-    "default_title": "vite-vue3-chrome-extension-starter",
+    "default_title": "SwitchyRelink",
     "default_popup": "src/views/popup/main.html",
     "default_icon": {
       "16": "./assets/logo.png",
